# CasperFlow

./: README.md
.agent/: IMPLEMENTATION_PLAN.md
casperflow_contracts/: .gitignore  CHANGELOG.md  Cargo.toml  Odra.toml  deploy.js  package-lock.json  package.json  secret_key.pem
casperflow_contracts/src/: lib.rs  stake_to_pay.rs  subscription_manager.rs
contracts/: .gitkeep  Cargo.toml  DEPLOYMENT_STATUS.md  Flipper_demo.wasm  Odra.toml  README.md  deploy.sh
contracts/src/: billing_engine.rs  lib.rs  stake_to_pay.rs  subscription_manager.rs  usage_meter.rs
cross-chain/: .gitkeep  README.md
cross-chain/contracts/: PaymentBridge.sol
docs/: SDK.md
frontend/: package-lock.json  package.json
frontend/public/: widget.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/app/: page.tsx
frontend/src/app/docs/: page.tsx
frontend/src/components/dashboard/: DashboardLayout.tsx
frontend/src/components/landing/: FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navbar.tsx  UseCasesSection.tsx  index.ts
frontend/src/components/ui/: Loading.tsx  Toast.tsx
frontend/src/components/wallet/: ConnectWalletButton.tsx
frontend/src/context/: NotificationsContext.tsx  PlansContext.tsx  StakeToPayContext.tsx  SubscriptionsContext.tsx  WalletContext.tsx  index.ts
frontend/src/lib/: casper.ts  utils.ts
sdk/: README.md  package.json
sdk/src/: casperflow.ts  index.ts  types.ts  utils.ts
sdk/src/contracts/: billing-engine.ts  index.ts  stake-to-pay.ts  subscription-manager.ts  usage-meter.ts
(+22 files in other folders)
